fix for leaderboard, added spacing between sign up and login

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -51,6 +51,10 @@
   font-size: 1.3em;
 }
 
+a.lemon {
+  margin-right: 1em;
+}
+
 .logo-gif-div {
   width: 100px;
   height: 100px;
